--- a/MagnusIAS4/app/src/main/res/values/dimens.xml
+++ b/MagnusIAS4/app/src/main/res/values/dimens.xml
@@ -17,4 +17,5 @@
     <dimen name="ic_album_overflow_width">20dp</dimen>
     <dimen name="ic_album_overflow_height">30dp</dimen>
     <dimen name="ic_album_overflow_margin_top">10dp</dimen>
+    <dimen name="random_test_text_size">20sp</dimen>
 </resources>
