--- a/MagnusIAS4/app/src/main/res/layout/activity_main.xml
+++ b/MagnusIAS4/app/src/main/res/layout/activity_main.xml
@@ -312,17 +312,28 @@
             android:text="Save Data Offline"
             android:textAllCaps="false"
             android:visibility="gone"/>
-
-
-
-      <!--  <Button
-            android:id="@+id/topMenu1"
+        <Button
+            android:id="@+id/btnLogOut"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:gravity="left|center_vertical"
             android:background="@android:color/white"
             android:paddingLeft="5dp"
-            android:text="TopMenu1"/>-->
+            android:text="Log out"
+            android:visibility="gone"
+            android:textAllCaps="false"/>
+
+
+
+
+        <!--  <Button
+              android:id="@+id/topMenu1"
+              android:layout_width="match_parent"
+              android:layout_height="40dp"
+              android:gravity="left|center_vertical"
+              android:background="@android:color/white"
+              android:paddingLeft="5dp"
+              android:text="TopMenu1"/>-->
 
         <!--//////////////////////////////////////////-->
         <!--<LinearLayout
