--- a/MagnusIAS4/app/src/main/res/layout/test_layout.xml
+++ b/MagnusIAS4/app/src/main/res/layout/test_layout.xml
@@ -46,7 +46,8 @@
                     android:fitsSystemWindows="true"
                     android:scaleType="centerCrop"
                     app:layout_collapseMode="parallax"
-                    android:src="@drawable/cover"/>
+                    android:src="@drawable/cover"
+                    />
 
                 <!-- <LinearLayout
                      android:layout_width="wrap_content"
