--- a/MagnusIAS4/app/src/main/res/layout/activity_video_acitvity.xml
+++ b/MagnusIAS4/app/src/main/res/layout/activity_video_acitvity.xml
@@ -4,10 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="pranay.example.com.magnusias4.VideoAcitvity">
 
     <WebView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/webView"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Save Video Offline"
+        android:textAllCaps="false"
+        android:id="@+id/saveVideo"/>
+
+    <VideoView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/videoView_save_offline"/>
 </LinearLayout>
