--- a/MagnusIAS4/app/src/main/res/layout-sw720dp/album_card.xml
+++ b/MagnusIAS4/app/src/main/res/layout-sw720dp/album_card.xml
@@ -57,16 +57,17 @@
                 android:paddingRight="@dimen/album_title_padding"
                 android:textSize="@dimen/songs_count" />
 
-            <!--  <ImageView
-                  android:id="@+id/overflow"
-                  android:layout_width="@dimen/ic_album_overflow_width"
-                  android:layout_height="@dimen/ic_album_overflow_height"
-                  android:layout_alignParentRight="true"
-                  android:layout_below="@id/thumbnail"
-                  android:layout_marginTop="@dimen/ic_album_overflow_margin_top"
-                  android:scaleType="centerCrop"
-                  android:src="@drawable/ic_dots" />
-  -->
+            <ImageView
+                android:id="@+id/overflow"
+                android:layout_width="@dimen/ic_album_overflow_width"
+                android:layout_height="@dimen/ic_album_overflow_height"
+                android:layout_alignParentRight="true"
+                android:layout_below="@id/thumbnail"
+                android:layout_marginTop="@dimen/ic_album_overflow_margin_top"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_more_vert_black_24dp"
+                android:visibility="gone"/>
+
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
