--- a/MagnusIAS4/app/src/main/res/layout/activity_exam.xml
+++ b/MagnusIAS4/app/src/main/res/layout/activity_exam.xml
@@ -8,6 +8,9 @@
     android:orientation="vertical"
     >
 
+
+
+
 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
@@ -93,11 +96,17 @@
     </LinearLayout>
 </LinearLayout>
 </LinearLayout>
-<!--******************************************************************************-->
 
+
+
+<!--******************************************************************************-->
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:id="@+id/resultLayout"
         android:visibility="gone"
@@ -363,7 +372,22 @@
 
 
     </LinearLayout>
-    </LinearLayout>
 
+    </LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/showAnswer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Show Answers"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:visibility="gone"
+          />
+    </RelativeLayout>
+
+</LinearLayout>
 
 </LinearLayout>
