--- a/MagnusIAS4/app/src/main/res/layout/fragment_video.xml
+++ b/MagnusIAS4/app/src/main/res/layout/fragment_video.xml
@@ -5,12 +5,98 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
    android:orientation="vertical">
+
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/webViewLayout"
+    android:orientation="vertical"
+    >
+
     <WebView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/webview">
+        android:layout_height="500dp"
+        android:id="@+id/webview"
+        >
 
     </WebView>
 
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Save Video Offline"
+        android:textAllCaps="false"
+        android:id="@+id/saveVideo_fragment"/>
+
+</LinearLayout>
+
+
+
+        <!--<pl.droidsonroids.gif.GifImageView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:visibility="gone"
+            android:id="@+id/gifImageView"/>-->
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:weightSum="1"
+    android:id="@+id/offline_video_layout">
+
+    <VideoView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/videoView_save_offline_fragment"
+
+        android:layout_weight="0.5"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        />
+    <com.github.barteksc.pdfviewer.PDFView
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:id="@+id/pdfNotes_0"
+        android:layout_weight="0.5"
+        />
+
+
+</LinearLayout>
+<!--
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Play"
+        android:textAllCaps="false"
+        android:visibility="gone"
+        android:id="@+id/playOfflineVideo"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Remove Video"
+        android:textAllCaps="false"
+        android:visibility="gone"
+        android:id="@+id/deleteOfflineVideo"/>
+
+</LinearLayout>
+
+-->
+
+
+    </LinearLayout>
 </LinearLayout>
