--- a/MagnusIAS4/app/src/main/res/layout/mock_test_mains.xml
+++ b/MagnusIAS4/app/src/main/res/layout/mock_test_mains.xml
@@ -2,12 +2,42 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <com.github.barteksc.pdfviewer.PDFView
+    <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/LinearLayoutQuestion"
+        android:orientation="vertical">
+
+        <com.github.barteksc.pdfviewer.PDFView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/pdf_question_paper"></com.github.barteksc.pdfviewer.PDFView>
+    </LinearLayout>
+    <Button
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/pdf_question"></com.github.barteksc.pdfviewer.PDFView>
-<!--<com.github.barteksc.pdfviewer.PDFView
+        android:id="@+id/showAnswer"
+        android:text="Show Answer"/>
+<TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:id="@+id/pdf_answer"/>-->
+    android:id="@+id/LabelAnswer"
+    android:text="Answer"
+    android:textStyle="bold"
+    android:textSize="20sp"
+    android:visibility="gone"
+    />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/LinearLayoutAnswer"
+        android:orientation="vertical"
+        >
+
+        <com.github.barteksc.pdfviewer.PDFView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/pdf_answer_paper"></com.github.barteksc.pdfviewer.PDFView>
+    </LinearLayout>
+
 </LinearLayout>
