--- a/MagnusIAS4/app/src/main/res/layout/test_layout.xml
+++ b/MagnusIAS4/app/src/main/res/layout/test_layout.xml
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/detail_backdrop_height"
         android:fitsSystemWindows="true"
-
+        android:background="#000"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -44,10 +44,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:fitsSystemWindows="true"
-                    android:scaleType="centerCrop"
+
                     app:layout_collapseMode="parallax"
-                    android:src="@drawable/cover"
-                    />
+                    android:src="@drawable/cover1"/>
 
                 <!-- <LinearLayout
                      android:layout_width="wrap_content"
